[gd_scene load_steps=30 format=3 uid="uid://l6jco6fbtalm"]

[ext_resource type="Script" path="res://Pentagrams/Pentagram3.gd" id="1_p4jhv"]
[ext_resource type="FontFile" uid="uid://bu013y6yfn0nb" path="res://Assets/Fonts/yatra-one/YatraOne-Regular.ttf" id="2_gnv8r"]
[ext_resource type="Texture2D" uid="uid://udu2pnrs0017" path="res://Assets/Paper/kiwihug-zGZYQQVmXw0-unsplash (1) (1).jpg" id="2_wcq1n"]
[ext_resource type="PackedScene" uid="uid://ci228wtmon7cr" path="res://UI/keys_ui_for_pentagram.tscn" id="3_flfn5"]
[ext_resource type="PackedScene" uid="uid://dshvxnpxiqv28" path="res://UI/note_count_pentagram_ui.tscn" id="4_fcnw1"]
[ext_resource type="PackedScene" uid="uid://biorlntk8f30j" path="res://Pentagrams/note_drop_zone.tscn" id="5_f5dfj"]
[ext_resource type="PackedScene" uid="uid://hxog5axf3caa" path="res://Pentagrams/key_drop_zone.tscn" id="6_iecbk"]
[ext_resource type="PackedScene" uid="uid://b17exkc5uhsah" path="res://Keys/basic_key_drag_and_drop.tscn" id="7_xypba"]
[ext_resource type="Texture2D" uid="uid://bvy7ka3fa70tk" path="res://Assets/Keys/F.png" id="8_grl23"]
[ext_resource type="PackedScene" uid="uid://c1gdgdjxavv24" path="res://Notes/basic_note_drag_and_drop.tscn" id="8_iivym"]
[ext_resource type="AudioStream" uid="uid://dike0yyvo5hy" path="res://Assets/Audio/Pentagram3/1.mp3" id="10_qr7ob"]
[ext_resource type="AudioStream" uid="uid://c8mmm5edsfix2" path="res://Assets/Audio/Pentagram3/2.mp3" id="11_nlbol"]
[ext_resource type="PackedScene" uid="uid://qli11d4ofjc7" path="res://Instruments/basic_instrument.tscn" id="12_3wx5y"]
[ext_resource type="AudioStream" uid="uid://c0wuoh5tuxcpf" path="res://Assets/Audio/Pentagram3/3.mp3" id="12_qnvu2"]
[ext_resource type="PackedScene" uid="uid://dp2sqc60f0cwg" path="res://Pentagrams/magic_ball.tscn" id="13_w7ri4"]
[ext_resource type="AudioStream" uid="uid://b01kmyh4jgo15" path="res://Assets/Audio/Pentagram3/4.mp3" id="13_xept2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku4s3"]
bg_color = Color(0.820313, 0.699219, 0.945313, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr2lk"]
bg_color = Color(0.816406, 0.695313, 0.941406, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.584314, 0.4, 0.976471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8o8s"]
bg_color = Color(0.820313, 0.699219, 0.945313, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.605469, 0.433594, 0.953125, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o42ov"]
bg_color = Color(0.816406, 0.695313, 0.941406, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.584314, 0.4, 0.976471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fduv4"]
bg_color = Color(0.816406, 0.695313, 0.941406, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.584314, 0.4, 0.976471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65dge"]
bg_color = Color(0.820313, 0.699219, 0.945313, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.605469, 0.433594, 0.953125, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jskbq"]
bg_color = Color(0.816406, 0.695313, 0.941406, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.584314, 0.4, 0.976471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qbn7m"]
a = Vector2(-4, 6)
b = Vector2(16, 13)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m7a26"]
a = Vector2(-4, 4)
b = Vector2(8, -6)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5slqc"]
a = Vector2(-8, -2)
b = Vector2(6, 7)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8da4s"]
a = Vector2(-8, -2)
b = Vector2(2, -9)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m77uv"]
a = Vector2(-5, -17)
b = Vector2(2, -9)

[sub_resource type="Curve2D" id="Curve2D_rcynu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 160, 320, -45.4953, 131.358, 45.4953, -131.358, 265.926, 288, 0, 0, 0, 0, 410.371, 304, -42.9624, 84.0989, 42.9624, -84.0989, 554.816, 240, -9.81376, -79.6019, 9.81376, 79.6019, 699.26, 256, 0, 0, 0, 0, 843.705, 320)
}
point_count = 6

[node name="Pentagram3" type="Node2D"]
script = ExtResource("1_p4jhv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Final" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -41.0
offset_right = 166.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ku4s3")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Final"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="CanvasLayer/Final/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("2_gnv8r")
theme_override_font_sizes/font_size = 18
text = "A door was unlocked!
Press \"Quit\""
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 0.784314, 1)
offset_right = 1618.0
offset_bottom = 734.0
texture = ExtResource("2_wcq1n")

[node name="KeysUIforPentagram" parent="." instance=ExtResource("3_flfn5")]

[node name="note_count_pentagram_ui" parent="." instance=ExtResource("4_fcnw1")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 220.0
offset_top = 430.0
offset_right = 220.0
offset_bottom = 430.0
grow_horizontal = 1
grow_vertical = 1

[node name="Play" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1080.0
offset_top = 592.0
offset_right = 1140.0
offset_bottom = 623.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_lr2lk")
theme_override_styles/hover = SubResource("StyleBoxFlat_p8o8s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o42ov")
text = "Play"

[node name="Quit" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1020.0
offset_top = 592.0
offset_right = 1076.0
offset_bottom = 623.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fduv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_65dge")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jskbq")
text = "Quit"

[node name="Lines" type="Node2D" parent="."]
position = Vector2(0, 64)

[node name="Line2D" type="Line2D" parent="Lines"]
position = Vector2(96, 224)
points = PackedVector2Array(0, 0, 64, 0, 128, 0, 192, 0, 256, 0, 320, 0, 384, 0, 448, 0, 512, 0, 576, 0, 640, 0, 704, 0, 768, 0, 831, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D2" type="Line2D" parent="Lines"]
position = Vector2(96, 256)
points = PackedVector2Array(0, 0, 64, 0, 128, 0, 192, 0, 256, 0, 320, 0, 384, 0, 448, 0, 512, 0, 576, 0, 640, 0, 704, 0, 768, 0, 831, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D3" type="Line2D" parent="Lines"]
position = Vector2(96, 288)
points = PackedVector2Array(0, 0, 64, 0, 128, 0, 192, 0, 256, 0, 320, 0, 384, 0, 448, 0, 512, 0, 576, 0, 640, 0, 704, 0, 768, 0, 831, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D4" type="Line2D" parent="Lines"]
position = Vector2(96, 320)
points = PackedVector2Array(0, 0, 64, 0, 128, 0, 192, 0, 256, 0, 320, 0, 384, 0, 448, 0, 512, 0, 576, 0, 640, 0, 704, 0, 768, 0, 831, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D5" type="Line2D" parent="Lines"]
position = Vector2(96, 352)
points = PackedVector2Array(0, 0, 64, 0, 128, 0, 192, 0, 256, 0, 320, 0, 384, 0, 448, 0, 512, 0, 576, 0, 640, 0, 704, 0, 768, 0, 831, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D6" type="Line2D" parent="Lines"]
position = Vector2(925, 226)
points = PackedVector2Array(0, 128, 0, -4)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="Line2D7" type="Line2D" parent="Lines"]
position = Vector2(919, 225)
points = PackedVector2Array(0, 128, 0, 0)
width = 5.0
default_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="DropZones" type="Node2D" parent="."]
position = Vector2(0, 64)

[node name="NoteDropZone1" parent="DropZones" node_paths=PackedStringArray("sound1") instance=ExtResource("5_f5dfj")]
position = Vector2(270, 336)
sound1 = NodePath("../../AudioStreamPlayer")

[node name="NoteDropZone2" parent="DropZones" node_paths=PackedStringArray("sound1") instance=ExtResource("5_f5dfj")]
position = Vector2(420, 352)
sound1 = NodePath("../../AudioStreamPlayer2")

[node name="NoteDropZone3" parent="DropZones" node_paths=PackedStringArray("sound1") instance=ExtResource("5_f5dfj")]
position = Vector2(570, 288)
sound1 = NodePath("../../AudioStreamPlayer3")

[node name="NoteDropZone4" parent="DropZones" node_paths=PackedStringArray("sound1") instance=ExtResource("5_f5dfj")]
position = Vector2(720, 304)
sound1 = NodePath("../../AudioStreamPlayer4")

[node name="NoteDropZone5" parent="DropZones" node_paths=PackedStringArray("sound1") instance=ExtResource("5_f5dfj")]
position = Vector2(2505, -103)
sound1 = NodePath("../../AudioStreamPlayer3")

[node name="KeyDropZone" parent="DropZones" instance=ExtResource("6_iecbk")]
position = Vector2(160, 288)

[node name="Keys" type="Node2D" parent="."]

[node name="G" parent="Keys" instance=ExtResource("7_xypba")]
position = Vector2(379, 128)

[node name="F" parent="Keys" instance=ExtResource("7_xypba")]
position = Vector2(605, 131)

[node name="Sprite2D" parent="Keys/F" index="0"]
texture = ExtResource("8_grl23")

[node name="CheckPointAreas" type="Node2D" parent="."]
position = Vector2(0, 32)

[node name="CheckPoint1" type="Area2D" parent="CheckPointAreas"]
position = Vector2(288, 272)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointAreas/CheckPoint1"]
position = Vector2(-21, -3)
shape = SubResource("SegmentShape2D_qbn7m")
debug_color = Color(0.203922, 0.54902, 0.882353, 0.419608)

[node name="CheckPoint2" type="Area2D" parent="CheckPointAreas"]
position = Vector2(461, 306)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointAreas/CheckPoint2"]
position = Vector2(-41, -2)
shape = SubResource("SegmentShape2D_m7a26")
debug_color = Color(0.203922, 0.54902, 0.882353, 0.419608)

[node name="CheckPoint3" type="Area2D" parent="CheckPointAreas"]
position = Vector2(613, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointAreas/CheckPoint3"]
position = Vector2(-40, -14)
shape = SubResource("SegmentShape2D_5slqc")
debug_color = Color(0.203922, 0.54902, 0.882353, 0.419608)

[node name="CheckPoint4" type="Area2D" parent="CheckPointAreas"]
position = Vector2(613, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointAreas/CheckPoint4"]
position = Vector2(113, 16)
shape = SubResource("SegmentShape2D_8da4s")
debug_color = Color(0.203922, 0.54902, 0.882353, 0.419608)

[node name="CheckPoint5" type="Area2D" parent="CheckPointAreas"]
position = Vector2(613, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointAreas/CheckPoint5"]
position = Vector2(258, 83)
shape = SubResource("SegmentShape2D_m77uv")
debug_color = Color(0.203922, 0.54902, 0.882353, 0.419608)

[node name="Notes" type="Node2D" parent="."]

[node name="Note1" parent="Notes" instance=ExtResource("8_iivym")]
position = Vector2(320, 534)

[node name="Note2" parent="Notes" instance=ExtResource("8_iivym")]
position = Vector2(448, 535)

[node name="Note3" parent="Notes" instance=ExtResource("8_iivym")]
position = Vector2(576, 534)

[node name="Note4" parent="Notes" instance=ExtResource("8_iivym")]
position = Vector2(706, 535)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qr7ob")
volume_db = 10.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nlbol")
volume_db = 2.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_qnvu2")
volume_db = 2.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_xept2")
volume_db = 2.0

[node name="Goal" parent="." instance=ExtResource("12_3wx5y")]
position = Vector2(870, 352)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-6.15385, 32)
scale = Vector2(1.03846, 1)
curve = SubResource("Curve2D_rcynu")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(160, 320)
rotation = 0.0996687
rotates = false
loop = false

[node name="MagicBall" parent="Path2D/PathFollow2D" instance=ExtResource("13_w7ri4")]

[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="area_entered" from="CheckPointAreas/CheckPoint1" to="." method="_on_check_point_1_area_entered"]
[connection signal="area_entered" from="CheckPointAreas/CheckPoint2" to="." method="_on_check_point_2_area_entered"]
[connection signal="area_entered" from="CheckPointAreas/CheckPoint3" to="." method="_on_check_point_3_area_entered"]
[connection signal="area_entered" from="CheckPointAreas/CheckPoint4" to="." method="_on_check_point_4_area_entered"]
[connection signal="area_entered" from="CheckPointAreas/CheckPoint5" to="." method="_on_check_point_5_area_entered"]

[editable path="Keys/F"]
